@@ -1,15 +1,18 @@
 Usage
 ===========================
-
-How to use django-uni-form
-
+Ways to use Django-uni-form
+===========================
 
 Using the django-uni-form filter (Easy and fun!)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+=================================================
 1. Add ``{% load uni_form_tags %}`` to the template that calls your form.
 2. Append your form call with the as_uni_form filter::
 
     {{ my_form|as_uni_form }}
+
+   Or, to render a formset::
+
+    {{ my_formset|as_uni_form_set }}
 
 3. Add the class of 'uniForm' to your form. Example::
 
@@ -18,7 +21,7 @@ Using the django-uni-form filter (Easy and fun!)
 4. Refresh and enjoy!
 
 Using the django-uni-form templatetag in your view (Intermediate)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+====================================================================
 1. In your views.py add the following after field definitions::
 
     from django.shortcuts import render_to_response
@@ -55,8 +58,17 @@ Using the django-uni-form templatetag in your view (Intermediate)
     
     {% uni_form form helper %}
 
+   To render a formset, use the following instead::
+
+    {% uni_form_set formset helper %}
+
+   Note that ``toggle_fields`` is currently not supported for
+   formsets.  If you provide a layout in the helper, it is applied to
+   each subform separately.
+
+
 Using the django-uni-form templatetag in your form class (Intermediate)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+========================================================================
 1. In your form class add the following after field definitions::
 
     from uni_form.helpers import FormHelper, Submit, Reset
@@ -84,8 +96,39 @@ Using the django-uni-form templatetag in your form class (Intermediate)
         {% uni_form form helper %}
     {% endwith %}
     
+Using the django-uni-form templatetag in your formset class (Intermediate)
+==========================================================================
+To render repeated forms using Django's formsets and django-uni-form,
+use the ``{% uni_form_set %}`` template tag.
+
+1. In your formset class add the following::
+
+    from uni_form.helpers import FormHelper, Submit, Reset
+
+    MyFormset = forms.formsets.formset_factory(MyForm)
+
+    # Attach a formHelper to your formset class.
+    MyFormset.helper = FormHelper()
+
+    # Add in a class and id
+    helper.form_id = 'this-formset-rocks'
+    helper.form_class = 'save-multiple'
+
+    # add in a submit and reset button
+    submit = Submit('save', 'Save these items')
+    helper.add_input(submit)
+    reset = Reset('reset', 'Reset the form')
+    helper.add_input(reset)
+
+2. In your template do the following::
+
+    {% load uni_form_tags %}
+    {% with formset.helper as helper %}
+        {% uni_form_set formset helper %}
+    {% endwith %}
+
 Using the django-uni-form templatetag to change action/method (Intermediate)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+============================================================================
 1. In your form class add the following after field definitions::
 
     from uni_form.helpers import FormHelper, Submit
@@ -114,7 +157,7 @@ Using the django-uni-form templatetag to change action/method (Intermediate)
 
 
 Adding a layout to your form class (Intermediate)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+==================================================
 
 Uniform helpers can use layout objects. A layout can consist of fieldsets, rows, columns, HTML and fields. A simple Example::
 
@@ -175,5 +218,6 @@ Then, just like in the previous example, add the following to your template::
 
 This allows you to group fields in fieldsets, or rows or columns or add HTML between fields etc.
 
-.. _Django: http://djangoproject.com
-.. _`Uni-form`: http://sprawsm.com/uni-form
+This method is also valid when using the ``{% uni_form_set %}``
+template tag.  The layout is applied separately to each subform of the
+formset.
