@@ -1,0 +1,8 @@
+{% load uni_form_tags %}
+{{ formset.management_form|as_uni_form }}
+{% for form in formset.forms %}
+    <div class="multiField">
+    {{ form|as_uni_form }}
+    </div>
+{% endfor %}
+
