@@ -1,0 +1,35 @@
+{% load uni_form_tags i18n %}
+
+{% if form_tag %}<form action="{{ form_action|lower }}" class="uniForm{% if form_class %} {% endif %}{{ form_class }}" method="{{ form_method }}"{% if form_id %} id="{{ form_id|slugify }}"{% endif %}{% if form.is_multipart %} enctype="multipart/form-data"{% endif %}>{% endif %}
+	{% csrf_token %}
+	{% if formset.non_field_errors %}
+        <div id="errorMsg">
+            <h3>{% if error_message_title %}{{ error_message_title }}{% else %}Errors{% endif %}</h3>
+            <ol>
+                {{ form.non_field_errors|unordered_list }}
+            </ol>
+        </div>
+    {% endif %}
+	{{ formset.management_form|as_uni_form }}
+	{% for form in formset.forms %}
+        {% if form.form_html %}
+        	{{ form.form_html }}
+        {% else %}
+            {{ form|as_uni_form }}
+        {% endif %}
+    {% endfor %}
+    {% if inputs %}
+        <div class="buttonHolder">
+            {% for input in inputs %}
+                <input type="{{ input.input_type }}"
+                        name="{{ input.name|slugify }}"
+                        value="{{ input.value }}"
+                        {% ifnotequal input.input_type "hidden" %}
+                            class="{{ input.field_classes }}"
+                            id="{{ input.input_type }}-id-{{ input.name|slugify }}"
+                        {% endifnotequal %}
+                        />
+            {% endfor %}
+        </div>
+    {% endif %}
+{% if form_tag %}</form>{% endif %}
